[package]
name = "rusty_contacts"
version = "0.1.0"
authors = ["Marco Gasparini <thepvo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
lazy_static = "1.4.0"
base64 = "0.12.3"
log = "0.4.11"
env_logger = "0.7.1"

ring = "0.16.15"
rsa = "0.3.0"
sha2 = "0.9.1"
aes = "0.5.0"
block-modes = "0.6.1"
rand = "0.7.3"
